--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto Redes Sociais</title>
+    <style>
+        
+    </style>
 </head>
 <body>
-    
+    <main>
+        <section id="telefone">
+
+        </section>
+        <section  id="redes-sociais">
+             <a href="#"><img class="img" src="imagens/logo-home.jpg" alt=""></a>
+            <a href=""><img class="img" src="imagens/logo-youtube.jpg" alt=""></a>
+            <a href=""><img class="img" src="imagens/logo-github.jpg" alt=""></a>
+            <a href=""><img class="img" src="imagens/logo-instagram.jpg" alt=""></a>
+            <a href=""><img class="img" src="imagens/logo-twitter.jpg" alt=""></a>
+            <a href=""><img class="img" src="imagens/logo-facebook.jpg" alt=""></a>
+        </section>
+    </main>
 </body>
 </html>
