--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
 <body>
     <main>
         <section id="telefone">
-
+            <iframe src="imagens/tela-home.jpg" ></iframe>
         </section>
         <section  id="redes-sociais">
-             <a href="#"><img class="img" src="imagens/logo-home.jpg" alt=""></a>
-            <a href=""><img class="img" src="imagens/logo-youtube.jpg" alt=""></a>
-            <a href=""><img class="img" src="imagens/logo-github.jpg" alt=""></a>
-            <a href=""><img class="img" src="imagens/logo-instagram.jpg" alt=""></a>
-            <a href=""><img class="img" src="imagens/logo-twitter.jpg" alt=""></a>
-            <a href=""><img class="img" src="imagens/logo-facebook.jpg" alt=""></a>
+             <a href="#"><img class="img" src="imagens/logo-home.jpg" alt="Home"></a>
+            <a href=""><img class="img" src="imagens/logo-youtube.jpg" alt="YouTube"></a>
+            <a href=""><img class="img" src="imagens/logo-github.jpg" alt="GitHub"></a>
+            <a href=""><img class="img" src="imagens/logo-instagram.jpg" alt="Instagram"></a>
+            <a href=""><img class="img" src="imagens/logo-twitter.jpg" alt="Twitter"></a>
+            <a href=""><img class="img" src="imagens/logo-facebook.jpg" alt="Facebook"></a>
+           
         </section>
     </main>
 </body>
