--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="imagens/tela-home.jpg" ></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
         <section  id="redes-sociais">
              <a href="#"><img class="img" src="imagens/logo-home.jpg" alt="Home"></a>
